vamos por la mitad

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,18 +3,45 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="../starter-code/style.css">
   <title>Frontend Mentor | Workit landing page</title>
 </head>
 <body>
+  <header class="header">
+      <nav class="navbar">
+          <div class="logo">
+            <img src="../starter-code/assets/images/logo-light.svg" alt="">
+          </div>
+          <div class="nav-acc">
+            <a href="#">Apply for access</a>
+          </div>
+      </nav>
+  </header>
+  <section class="hero">
+    <div class="container-hero">
+      <h1>Data <span>tailored</span> to your needs.</h1>
+    <button class="btn-hero">
+      Learn more
+    </button>
+    </div>
+    <div class="Whirlpool">
+      <img src="./assets/images/bg-pattern-1.svg" alt="">
+    </div>
+    <div class="Whirlpool2">
+      <img src="./assets/images/bg-pattern-2.svg" alt="">
+    </div>
+    <div class="ornamental">
+    </div>
+    <div class="imagen-hero">
+      <img src="./starter-code/assets/images/image-hero.webp" alt="">
+    </div>
+  </section>
+ 
 
-  Apply for access
+  
 
-  Data tailored to your needs.
-
-  Learn more
+  L
   
   1
 
