--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,9 +32,21 @@
       <img src="./assets/images/bg-pattern-2.svg" alt="">
     </div>
     <div class="ornamental">
+      <svg viewBox="0 0 1440 160" preserveAspectRatio="none">
+        <path
+           d="
+        M0,0
+        Q720,200 1440,0
+        L1440,0
+        L0,0
+        Z
+      "
+          fill="var(--purple900)"
+        />
+      </svg>
     </div>
     <div class="imagen-hero">
-      <img src="./starter-code/assets/images/image-hero.webp" alt="">
+      <img src="../starter-code/assets/images/image-hero.webp" alt="">
     </div>
   </section>
  
