--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -49,40 +49,60 @@
       <img src="../starter-code/assets/images/image-hero.webp" alt="">
     </div>
   </section>
+  <section class="value">
+    <div class="container-value">
+      <div class="values">
+        <span>1</span>
+        <h2>Actionable insights</h2>
+        <p>Optimize your products, improve customer satisfaction and stay ahead of the competition 
+        with our product data analytics.</p>
+      </div>    
+       <div class="values">
+        <span>2</span>
+        <h2> Data-driven decisions</h2>
+        <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help 
+        you unlock insights hidden in your product data.</p>
+      </div>
+      <div class="values">
+        <span>3</span>
+        <h2>Always affordable</h2>
+        <p>Always affordable pricing that scales with your business. Get top-quality product data 
+        analytics services without hidden costs or unexpected fees.</p>
+      </div>     
+    </div>
+    <div class="ornamental">
+      <svg viewBox="0 0 1440 160" preserveAspectRatio="none">
+        <path
+           d="
+        M0,0
+        Q720,200 1440,0
+        L1440,0
+        L0,0
+        Z
+      "
+          fill="var(--purple100)"
+        />
+      </svg>
+    </div>
+  </section>
+  <section class="count">
+    <div class="container-count">
+      <div class="photo-count">
+        <img src="../starter-code/assets/images/image-founder.webp" alt="Founder">
+      </div>
+      <div class="count-content">
+        <h2>Be the first to test</h2>
+        <p>Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a beta tester for our app and kickstart your company. Apply for access below and I’ll be in touch to schedule a call.</p>
+        <button class="btn-count">
+         Apply for access
+        </button>
+      </div>
+    </div>
+  </section>
+  
  
 
   
-
-  L
-  
-  1
-
-  Actionable insights
-  
-  Optimize your products, improve customer satisfaction and stay ahead of the competition 
-  with our product data analytics.
-
-  2
-
-  Data-driven decisions
-
-  Make data-driven decisions with our product data analytics. Our AI-generated reports help 
-  you unlock insights hidden in your product data.
-
-  3
-
-  Always affordable
-
-  Always affordable pricing that scales with your business. Get top-quality product data 
-  analytics services without hidden costs or unexpected fees.
-
-  Be the first to test
-
-  Hi, I'm Louis Graham, the founder of the company. Book a demo call with me to become a 
-  beta tester for our app and kickstart your company. Apply for access below and I’ll be 
-  in touch to schedule a call.
-
-  Apply for access
 
 </body>
 </html>
