--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -96,13 +96,23 @@
         <button class="btn-count">
          Apply for access
         </button>
+        <div class="Whirlpool3">
+          <img src="../starter-code/assets/images/bg-pattern-3.svg" alt="">
+        </div>
       </div>
     </div>
   </section>
-  
- 
-
-  
-
+  <footer>
+    <div class="container-footer">
+      <div class="footer-logo">
+        <img src="../starter-code/assets/images/logo-dark.svg" alt="logo dark">
+      </div>  
+        <div class="footer-icons">
+          <img src="../starter-code/assets/images/icon-facebook.svg" alt="Facebook">
+          <img src="../starter-code/assets/images/icon-twitter.svg" alt="Twitter">
+          <img src="../starter-code/assets/images/icon-instagram.svg" alt="Instagram">
+        </div>
+    </div>
+  </footer>
 </body>
 </html>
