--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -52,22 +52,34 @@
   <section class="value">
     <div class="container-value">
       <div class="values">
-        <span>1</span>
-        <h2>Actionable insights</h2>
-        <p>Optimize your products, improve customer satisfaction and stay ahead of the competition 
-        with our product data analytics.</p>
+        <div class="values-number">
+          <span>1</span>
+        </div>
+        <div class="value-content">
+            <h2>Actionable insights</h2>
+            <p>Optimize your products, improve customer satisfaction and stay ahead of the competition 
+            with our product data analytics.</p>
+        </div>
       </div>    
        <div class="values">
-        <span>2</span>
-        <h2> Data-driven decisions</h2>
-        <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help 
+        <div class="values-number">
+           <span>2</span>
+        </div>
+        <div class="value-content">
+          <h2> Data-driven decisions</h2>
+          <p>Make data-driven decisions with our product data analytics. Our AI-generated reports help 
         you unlock insights hidden in your product data.</p>
+        </div>
       </div>
       <div class="values">
-        <span>3</span>
-        <h2>Always affordable</h2>
-        <p>Always affordable pricing that scales with your business. Get top-quality product data 
-        analytics services without hidden costs or unexpected fees.</p>
+        <div class="values-number">
+          <span>3</span>
+        </div>
+        <div class="value-content">
+          <h2>Always affordable</h2>
+          <p>Always affordable pricing that scales with your business. Get top-quality product data 
+          analytics services without hidden costs or unexpected fees.</p>
+        </div>
       </div>     
     </div>
     <div class="ornamental">
