--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="../starter-code/style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>Frontend Mentor | Workit landing page</title>
 </head>
 <body>
   <header class="header">
       <nav class="navbar">
           <div class="logo">
-            <img src="../starter-code/assets/images/logo-light.svg" alt="">
+            <img src="./assets/images/logo-light.svg" alt="">
           </div>
           <div class="nav-acc">
             <a href="#">Apply for access</a>
@@ -46,7 +46,7 @@
       </svg>
     </div>
     <div class="imagen-hero">
-      <img src="../starter-code/assets/images/image-hero.webp" alt="">
+      <img src="./assets/images/image-hero.webp" alt="">
     </div>
   </section>
   <section class="value">
@@ -100,7 +100,7 @@
   <section class="count">
     <div class="container-count">
       <div class="photo-count">
-        <img src="../starter-code/assets/images/image-founder.webp" alt="Founder">
+        <img src="./assets/images/image-founder.webp" alt="Founder">
       </div>
       <div class="count-content">
         <h2>Be the first to test</h2>
@@ -109,7 +109,7 @@
          Apply for access
         </button>
         <div class="Whirlpool3">
-          <img src="../starter-code/assets/images/bg-pattern-3.svg" alt="">
+          <img src="./assets/images/bg-pattern-3.svg" alt="">
         </div>
       </div>
     </div>
@@ -117,12 +117,12 @@
   <footer>
     <div class="container-footer">
       <div class="footer-logo">
-        <img src="../starter-code/assets/images/logo-dark.svg" alt="logo dark">
+        <img src="./assets/images/logo-dark.svg" alt="logo dark">
       </div>  
         <div class="footer-icons">
-          <img src="../starter-code/assets/images/icon-facebook.svg" alt="Facebook">
-          <img src="../starter-code/assets/images/icon-twitter.svg" alt="Twitter">
-          <img src="../starter-code/assets/images/icon-instagram.svg" alt="Instagram">
+          <img src="./assets/images/icon-facebook.svg" alt="Facebook">
+          <img src="./assets/images/icon-twitter.svg" alt="Twitter">
+          <img src="./assets/images/icon-instagram.svg" alt="Instagram">
         </div>
     </div>
   </footer>
